lib/antlr4/generated/ScriptLanguageParser.dart
// Generated from ScriptLanguage.g4 by ANTLR 4.13.0
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes, prefer_function_declarations_over_variables, constant_identifier_names, file_names, non_constant_identifier_names, no_leading_underscores_for_local_identifiers
import 'package:antlr4/antlr4.dart';

import 'ScriptLanguageVisitor.dart';
import 'ScriptLanguageBaseVisitor.dart';

const int RULE_scriptLanguage = 0,
    RULE_variableAssign = 1,
    RULE_terminalExpr = 2,
    RULE_booleanExpr = 3,
    RULE_fileConstant = 4,
    RULE_rankConstant = 5,
    RULE_numericExpr = 6;

class ScriptLanguageParser extends Parser {
  static final checkVersion =
      () => RuntimeMetaData.checkVersion('4.13.0', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache =
      PredictionContextCache();
  static const int TOKEN_T__0 = 1,
      TOKEN_T__1 = 2,
      TOKEN_T__2 = 3,
      TOKEN_T__3 = 4,
      TOKEN_T__4 = 5,
      TOKEN_T__5 = 6,
      TOKEN_T__6 = 7,
      TOKEN_T__7 = 8,
      TOKEN_T__8 = 9,
      TOKEN_T__9 = 10,
      TOKEN_T__10 = 11,
      TOKEN_T__11 = 12,
      TOKEN_T__12 = 13,
      TOKEN_T__13 = 14,
      TOKEN_T__14 = 15,
      TOKEN_T__15 = 16,
      TOKEN_T__16 = 17,
      TOKEN_T__17 = 18,
      TOKEN_T__18 = 19,
      TOKEN_T__19 = 20,
      TOKEN_T__20 = 21,
      TOKEN_T__21 = 22,
      TOKEN_T__22 = 23,
      TOKEN_T__23 = 24,
      TOKEN_T__24 = 25,
      TOKEN_T__25 = 26,
      TOKEN_T__26 = 27,
      TOKEN_T__27 = 28,
      TOKEN_T__28 = 29,
      TOKEN_T__29 = 30,
      TOKEN_T__30 = 31,
      TOKEN_T__31 = 32,
      TOKEN_T__32 = 33,
      TOKEN_T__33 = 34,
      TOKEN_T__34 = 35,
      TOKEN_T__35 = 36,
      TOKEN_NumericLitteral = 37,
      TOKEN_ID = 38,
      TOKEN_WS = 39;

  @override
  final List<String> ruleNames = [
    'scriptLanguage',
    'variableAssign',
    'terminalExpr',
    'booleanExpr',
    'fileConstant',
    'rankConstant',
    'numericExpr'
  ];

  static final List<String?> _LITERAL_NAMES = [
    null,
    "':='",
    "';'",
    "'return'",
    "'('",
    "')'",
    "'if'",
    "'then'",
    "'else'",
    "'<'",
    "'>'",
    "'<='",
    "'>='",
    "'='",
    "'<>'",
    "'and'",
    "'or'",
    "'FileA'",
    "'FileB'",
    "'FileC'",
    "'FileD'",
    "'FileE'",
    "'FileF'",
    "'FileG'",
    "'FileH'",
    "'Rank1'",
    "'Rank2'",
    "'Rank3'",
    "'Rank4'",
    "'Rank5'",
    "'Rank6'",
    "'Rank7'",
    "'Rank8'",
    "'abs('",
    "'%'",
    "'+'",
    "'-'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "NumericLitteral",
    "ID",
    "WS"
  ];
  static final Vocabulary VOCABULARY =
      VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'ScriptLanguage.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
    return _ATN;
  }

  ScriptLanguageParser(TokenStream input) : super(input) {
    interpreter =
        ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  ScriptLanguageContext scriptLanguage() {
    dynamic _localctx = ScriptLanguageContext(context, state);
    enterRule(_localctx, 0, RULE_scriptLanguage);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 17;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_ID) {
        state = 14;
        variableAssign();
        state = 19;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 20;
      terminalExpr();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  VariableAssignContext variableAssign() {
    dynamic _localctx = VariableAssignContext(context, state);
    enterRule(_localctx, 2, RULE_variableAssign);
    try {
      state = 32;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 1, context)) {
        case 1:
          _localctx = NumericAssignContext(_localctx);
          enterOuterAlt(_localctx, 1);
          state = 22;
          match(TOKEN_ID);
          state = 23;
          match(TOKEN_T__0);
          state = 24;
          numericExpr(0);
          state = 25;
          match(TOKEN_T__1);
          break;
        case 2:
          _localctx = BooleanAssignContext(_localctx);
          enterOuterAlt(_localctx, 2);
          state = 27;
          match(TOKEN_ID);
          state = 28;
          match(TOKEN_T__0);
          state = 29;
          booleanExpr(0);
          state = 30;
          match(TOKEN_T__1);
          break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  TerminalExprContext terminalExpr() {
    dynamic _localctx = TerminalExprContext(context, state);
    enterRule(_localctx, 4, RULE_terminalExpr);
    try {
      enterOuterAlt(_localctx, 1);
      state = 34;
      match(TOKEN_T__2);
      state = 35;
      booleanExpr(0);
      state = 36;
      match(TOKEN_T__1);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  BooleanExprContext booleanExpr([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = BooleanExprContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 6;
    enterRecursionRule(_localctx, 6, RULE_booleanExpr, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 59;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 2, context)) {
        case 1:
          _localctx = ParenthesisBooleanExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;

          state = 39;
          match(TOKEN_T__3);
          state = 40;
          booleanExpr(0);
          state = 41;
          match(TOKEN_T__4);
          break;
        case 2:
          _localctx = ConditionalBooleanExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 43;
          match(TOKEN_T__5);
          state = 44;
          booleanExpr(0);
          state = 45;
          match(TOKEN_T__6);
          state = 46;
          booleanExpr(0);
          state = 47;
          match(TOKEN_T__7);
          state = 48;
          booleanExpr(6);
          break;
        case 3:
          _localctx = BooleanVariableContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 50;
          match(TOKEN_ID);
          break;
        case 4:
          _localctx = NumericRelationalContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 51;
          numericExpr(0);
          state = 52;
          _localctx.op = tokenStream.LT(1);
          _la = tokenStream.LA(1)!;
          if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 7680) != 0))) {
            _localctx.op = errorHandler.recoverInline(this);
          } else {
            if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 53;
          numericExpr(0);
          break;
        case 5:
          _localctx = NumericEqualityContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 55;
          numericExpr(0);
          state = 56;
          _localctx.op = tokenStream.LT(1);
          _la = tokenStream.LA(1)!;
          if (!(_la == TOKEN_T__12 || _la == TOKEN_T__13)) {
            _localctx.op = errorHandler.recoverInline(this);
          } else {
            if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
            errorHandler.reportMatch(this);
            consume();
          }
          state = 57;
          numericExpr(0);
          break;
      }
      context!.stop = tokenStream.LT(-1);
      state = 69;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 4, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 67;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 3, context)) {
            case 1:
              _localctx = AndComparisonContext(
                  BooleanExprContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_booleanExpr);
              state = 61;
              if (!(precpred(context, 2))) {
                throw FailedPredicateException(this, "precpred(context, 2)");
              }
              state = 62;
              match(TOKEN_T__14);
              state = 63;
              booleanExpr(3);
              break;
            case 2:
              _localctx = OrComparisonContext(
                  BooleanExprContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_booleanExpr);
              state = 64;
              if (!(precpred(context, 1))) {
                throw FailedPredicateException(this, "precpred(context, 1)");
              }
              state = 65;
              match(TOKEN_T__15);
              state = 66;
              booleanExpr(2);
              break;
          }
        }
        state = 71;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 4, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  FileConstantContext fileConstant() {
    dynamic _localctx = FileConstantContext(context, state);
    enterRule(_localctx, 8, RULE_fileConstant);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 72;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 33423360) != 0))) {
        errorHandler.recoverInline(this);
      } else {
        if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  RankConstantContext rankConstant() {
    dynamic _localctx = RankConstantContext(context, state);
    enterRule(_localctx, 10, RULE_rankConstant);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 74;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 8556380160) != 0))) {
        errorHandler.recoverInline(this);
      } else {
        if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  NumericExprContext numericExpr([int _p = 0]) {
    final _parentctx = context;
    final _parentState = state;
    dynamic _localctx = NumericExprContext(context, _parentState);
    var _prevctx = _localctx;
    var _startState = 12;
    enterRecursionRule(_localctx, 12, RULE_numericExpr, _p);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      state = 96;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
        case TOKEN_T__3:
          _localctx = ParenthesisNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;

          state = 77;
          match(TOKEN_T__3);
          state = 78;
          numericExpr(0);
          state = 79;
          match(TOKEN_T__4);
          break;
        case TOKEN_T__5:
          _localctx = ConditionalNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 81;
          match(TOKEN_T__5);
          state = 82;
          booleanExpr(0);
          state = 83;
          match(TOKEN_T__6);
          state = 84;
          numericExpr(0);
          state = 85;
          match(TOKEN_T__7);
          state = 86;
          numericExpr(8);
          break;
        case TOKEN_T__32:
          _localctx = AbsoluteNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 88;
          match(TOKEN_T__32);
          state = 89;
          numericExpr(0);
          state = 90;
          match(TOKEN_T__4);
          break;
        case TOKEN_NumericLitteral:
          _localctx = LitteralNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 92;
          match(TOKEN_NumericLitteral);
          break;
        case TOKEN_ID:
          _localctx = NumericVariableContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 93;
          match(TOKEN_ID);
          break;
        case TOKEN_T__16:
        case TOKEN_T__17:
        case TOKEN_T__18:
        case TOKEN_T__19:
        case TOKEN_T__20:
        case TOKEN_T__21:
        case TOKEN_T__22:
        case TOKEN_T__23:
          _localctx = FileConstantNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 94;
          fileConstant();
          break;
        case TOKEN_T__24:
        case TOKEN_T__25:
        case TOKEN_T__26:
        case TOKEN_T__27:
        case TOKEN_T__28:
        case TOKEN_T__29:
        case TOKEN_T__30:
        case TOKEN_T__31:
          _localctx = RankConstantNumericExprContext(_localctx);
          context = _localctx;
          _prevctx = _localctx;
          state = 95;
          rankConstant();
          break;
        default:
          throw NoViableAltException(this);
      }
      context!.stop = tokenStream.LT(-1);
      state = 106;
      errorHandler.sync(this);
      _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
        if (_alt == 1) {
          if (parseListeners != null) triggerExitRuleEvent();
          _prevctx = _localctx;
          state = 104;
          errorHandler.sync(this);
          switch (interpreter!.adaptivePredict(tokenStream, 6, context)) {
            case 1:
              _localctx = ModuloNumericExprContext(
                  NumericExprContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_numericExpr);
              state = 98;
              if (!(precpred(context, 6))) {
                throw FailedPredicateException(this, "precpred(context, 6)");
              }
              state = 99;
              match(TOKEN_T__33);
              state = 100;
              numericExpr(7);
              break;
            case 2:
              _localctx = PlusMinusNumericExprContext(
                  NumericExprContext(_parentctx, _parentState));
              pushNewRecursionContext(_localctx, _startState, RULE_numericExpr);
              state = 101;
              if (!(precpred(context, 5))) {
                throw FailedPredicateException(this, "precpred(context, 5)");
              }
              state = 102;
              _localctx.op = tokenStream.LT(1);
              _la = tokenStream.LA(1)!;
              if (!(_la == TOKEN_T__34 || _la == TOKEN_T__35)) {
                _localctx.op = errorHandler.recoverInline(this);
              } else {
                if (tokenStream.LA(1)! == IntStream.EOF) matchedEOF = true;
                errorHandler.reportMatch(this);
                consume();
              }
              state = 103;
              numericExpr(6);
              break;
          }
        }
        state = 108;
        errorHandler.sync(this);
        _alt = interpreter!.adaptivePredict(tokenStream, 7, context);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      unrollRecursionContexts(_parentctx);
    }
    return _localctx;
  }

  @override
  bool sempred(RuleContext? _localctx, int ruleIndex, int actionIndex) {
    switch (ruleIndex) {
      case 3:
        return _booleanExpr_sempred(
            _localctx as BooleanExprContext?, actionIndex);
      case 6:
        return _numericExpr_sempred(
            _localctx as NumericExprContext?, actionIndex);
    }
    return true;
  }

  bool _booleanExpr_sempred(dynamic _localctx, int predIndex) {
    switch (predIndex) {
      case 0:
        return precpred(context, 2);
      case 1:
        return precpred(context, 1);
    }
    return true;
  }

  bool _numericExpr_sempred(dynamic _localctx, int predIndex) {
    switch (predIndex) {
      case 2:
        return precpred(context, 6);
      case 3:
        return precpred(context, 5);
    }
    return true;
  }

  static const List<int> _serializedATN = [
    4,
    1,
    39,
    110,
    2,
    0,
    7,
    0,
    2,
    1,
    7,
    1,
    2,
    2,
    7,
    2,
    2,
    3,
    7,
    3,
    2,
    4,
    7,
    4,
    2,
    5,
    7,
    5,
    2,
    6,
    7,
    6,
    1,
    0,
    5,
    0,
    16,
    8,
    0,
    10,
    0,
    12,
    0,
    19,
    9,
    0,
    1,
    0,
    1,
    0,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    3,
    1,
    33,
    8,
    1,
    1,
    2,
    1,
    2,
    1,
    2,
    1,
    2,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    3,
    3,
    60,
    8,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    1,
    3,
    5,
    3,
    68,
    8,
    3,
    10,
    3,
    12,
    3,
    71,
    9,
    3,
    1,
    4,
    1,
    4,
    1,
    5,
    1,
    5,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    3,
    6,
    97,
    8,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    1,
    6,
    5,
    6,
    105,
    8,
    6,
    10,
    6,
    12,
    6,
    108,
    9,
    6,
    1,
    6,
    0,
    2,
    6,
    12,
    7,
    0,
    2,
    4,
    6,
    8,
    10,
    12,
    0,
    5,
    1,
    0,
    9,
    12,
    1,
    0,
    13,
    14,
    1,
    0,
    17,
    24,
    1,
    0,
    25,
    32,
    1,
    0,
    35,
    36,
    118,
    0,
    17,
    1,
    0,
    0,
    0,
    2,
    32,
    1,
    0,
    0,
    0,
    4,
    34,
    1,
    0,
    0,
    0,
    6,
    59,
    1,
    0,
    0,
    0,
    8,
    72,
    1,
    0,
    0,
    0,
    10,
    74,
    1,
    0,
    0,
    0,
    12,
    96,
    1,
    0,
    0,
    0,
    14,
    16,
    3,
    2,
    1,
    0,
    15,
    14,
    1,
    0,
    0,
    0,
    16,
    19,
    1,
    0,
    0,
    0,
    17,
    15,
    1,
    0,
    0,
    0,
    17,
    18,
    1,
    0,
    0,
    0,
    18,
    20,
    1,
    0,
    0,
    0,
    19,
    17,
    1,
    0,
    0,
    0,
    20,
    21,
    3,
    4,
    2,
    0,
    21,
    1,
    1,
    0,
    0,
    0,
    22,
    23,
    5,
    38,
    0,
    0,
    23,
    24,
    5,
    1,
    0,
    0,
    24,
    25,
    3,
    12,
    6,
    0,
    25,
    26,
    5,
    2,
    0,
    0,
    26,
    33,
    1,
    0,
    0,
    0,
    27,
    28,
    5,
    38,
    0,
    0,
    28,
    29,
    5,
    1,
    0,
    0,
    29,
    30,
    3,
    6,
    3,
    0,
    30,
    31,
    5,
    2,
    0,
    0,
    31,
    33,
    1,
    0,
    0,
    0,
    32,
    22,
    1,
    0,
    0,
    0,
    32,
    27,
    1,
    0,
    0,
    0,
    33,
    3,
    1,
    0,
    0,
    0,
    34,
    35,
    5,
    3,
    0,
    0,
    35,
    36,
    3,
    6,
    3,
    0,
    36,
    37,
    5,
    2,
    0,
    0,
    37,
    5,
    1,
    0,
    0,
    0,
    38,
    39,
    6,
    3,
    -1,
    0,
    39,
    40,
    5,
    4,
    0,
    0,
    40,
    41,
    3,
    6,
    3,
    0,
    41,
    42,
    5,
    5,
    0,
    0,
    42,
    60,
    1,
    0,
    0,
    0,
    43,
    44,
    5,
    6,
    0,
    0,
    44,
    45,
    3,
    6,
    3,
    0,
    45,
    46,
    5,
    7,
    0,
    0,
    46,
    47,
    3,
    6,
    3,
    0,
    47,
    48,
    5,
    8,
    0,
    0,
    48,
    49,
    3,
    6,
    3,
    6,
    49,
    60,
    1,
    0,
    0,
    0,
    50,
    60,
    5,
    38,
    0,
    0,
    51,
    52,
    3,
    12,
    6,
    0,
    52,
    53,
    7,
    0,
    0,
    0,
    53,
    54,
    3,
    12,
    6,
    0,
    54,
    60,
    1,
    0,
    0,
    0,
    55,
    56,
    3,
    12,
    6,
    0,
    56,
    57,
    7,
    1,
    0,
    0,
    57,
    58,
    3,
    12,
    6,
    0,
    58,
    60,
    1,
    0,
    0,
    0,
    59,
    38,
    1,
    0,
    0,
    0,
    59,
    43,
    1,
    0,
    0,
    0,
    59,
    50,
    1,
    0,
    0,
    0,
    59,
    51,
    1,
    0,
    0,
    0,
    59,
    55,
    1,
    0,
    0,
    0,
    60,
    69,
    1,
    0,
    0,
    0,
    61,
    62,
    10,
    2,
    0,
    0,
    62,
    63,
    5,
    15,
    0,
    0,
    63,
    68,
    3,
    6,
    3,
    3,
    64,
    65,
    10,
    1,
    0,
    0,
    65,
    66,
    5,
    16,
    0,
    0,
    66,
    68,
    3,
    6,
    3,
    2,
    67,
    61,
    1,
    0,
    0,
    0,
    67,
    64,
    1,
    0,
    0,
    0,
    68,
    71,
    1,
    0,
    0,
    0,
    69,
    67,
    1,
    0,
    0,
    0,
    69,
    70,
    1,
    0,
    0,
    0,
    70,
    7,
    1,
    0,
    0,
    0,
    71,
    69,
    1,
    0,
    0,
    0,
    72,
    73,
    7,
    2,
    0,
    0,
    73,
    9,
    1,
    0,
    0,
    0,
    74,
    75,
    7,
    3,
    0,
    0,
    75,
    11,
    1,
    0,
    0,
    0,
    76,
    77,
    6,
    6,
    -1,
    0,
    77,
    78,
    5,
    4,
    0,
    0,
    78,
    79,
    3,
    12,
    6,
    0,
    79,
    80,
    5,
    5,
    0,
    0,
    80,
    97,
    1,
    0,
    0,
    0,
    81,
    82,
    5,
    6,
    0,
    0,
    82,
    83,
    3,
    6,
    3,
    0,
    83,
    84,
    5,
    7,
    0,
    0,
    84,
    85,
    3,
    12,
    6,
    0,
    85,
    86,
    5,
    8,
    0,
    0,
    86,
    87,
    3,
    12,
    6,
    8,
    87,
    97,
    1,
    0,
    0,
    0,
    88,
    89,
    5,
    33,
    0,
    0,
    89,
    90,
    3,
    12,
    6,
    0,
    90,
    91,
    5,
    5,
    0,
    0,
    91,
    97,
    1,
    0,
    0,
    0,
    92,
    97,
    5,
    37,
    0,
    0,
    93,
    97,
    5,
    38,
    0,
    0,
    94,
    97,
    3,
    8,
    4,
    0,
    95,
    97,
    3,
    10,
    5,
    0,
    96,
    76,
    1,
    0,
    0,
    0,
    96,
    81,
    1,
    0,
    0,
    0,
    96,
    88,
    1,
    0,
    0,
    0,
    96,
    92,
    1,
    0,
    0,
    0,
    96,
    93,
    1,
    0,
    0,
    0,
    96,
    94,
    1,
    0,
    0,
    0,
    96,
    95,
    1,
    0,
    0,
    0,
    97,
    106,
    1,
    0,
    0,
    0,
    98,
    99,
    10,
    6,
    0,
    0,
    99,
    100,
    5,
    34,
    0,
    0,
    100,
    105,
    3,
    12,
    6,
    7,
    101,
    102,
    10,
    5,
    0,
    0,
    102,
    103,
    7,
    4,
    0,
    0,
    103,
    105,
    3,
    12,
    6,
    6,
    104,
    98,
    1,
    0,
    0,
    0,
    104,
    101,
    1,
    0,
    0,
    0,
    105,
    108,
    1,
    0,
    0,
    0,
    106,
    104,
    1,
    0,
    0,
    0,
    106,
    107,
    1,
    0,
    0,
    0,
    107,
    13,
    1,
    0,
    0,
    0,
    108,
    106,
    1,
    0,
    0,
    0,
    8,
    17,
    32,
    59,
    67,
    69,
    96,
    104,
    106
  ];

  static final ATN _ATN = ATNDeserializer().deserialize(_serializedATN);
}

class ScriptLanguageContext extends ParserRuleContext {
  TerminalExprContext? terminalExpr() => getRuleContext<TerminalExprContext>(0);
  List<VariableAssignContext> variableAssigns() =>
      getRuleContexts<VariableAssignContext>();
  VariableAssignContext? variableAssign(int i) =>
      getRuleContext<VariableAssignContext>(i);
  ScriptLanguageContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_scriptLanguage;
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitScriptLanguage(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class VariableAssignContext extends ParserRuleContext {
  VariableAssignContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_variableAssign;
}

class TerminalExprContext extends ParserRuleContext {
  BooleanExprContext? booleanExpr() => getRuleContext<BooleanExprContext>(0);
  TerminalExprContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_terminalExpr;
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitTerminalExpr(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class BooleanExprContext extends ParserRuleContext {
  BooleanExprContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_booleanExpr;
}

class FileConstantContext extends ParserRuleContext {
  FileConstantContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_fileConstant;
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitFileConstant(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class RankConstantContext extends ParserRuleContext {
  RankConstantContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_rankConstant;
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitRankConstant(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class NumericExprContext extends ParserRuleContext {
  NumericExprContext([ParserRuleContext? parent, int? invokingState])
      : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_numericExpr;
}

class NumericAssignContext extends VariableAssignContext {
  TerminalNode? ID() => getToken(ScriptLanguageParser.TOKEN_ID, 0);
  NumericExprContext? numericExpr() => getRuleContext<NumericExprContext>(0);
  NumericAssignContext(VariableAssignContext ctx) {
    copyFrom(ctx);
  }
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitNumericAssign(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}

class BooleanAssignContext extends VariableAssignContext {
  TerminalNode? ID() => getToken(ScriptLanguageParser.TOKEN_ID, 0);
  BooleanExprContext? booleanExpr() => getRuleContext<BooleanExprContext>(0);
  BooleanAssignContext(VariableAssignContext ctx) {
    copyFrom(ctx);
  }
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is ScriptLanguageVisitor<T>) {
      return visitor.visitBooleanAssign(this);
    } else {
      return visitor.visitChildren(this);
    }
  }
}
